[package]
name = "lazr_prop_amm"
version = "0.1.0"
description = "Proprietary AMM running inside MagicBlock Ephemeral Rollup"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lazr_prop_amm"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { version = "1.0.2", features = ["init-if-needed"] }
anchor-spl = { version = "1.0.2" }
ephemeral-rollups-sdk = { version = "0.14.3", features = ["anchor"] }
magicblock-magic-program-api = { version = "0.10.1", default-features = false }
session-keys = { version = "3.1.1", features = ["no-entrypoint"] }
bincode = "^1.3"

[dev-dependencies]

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
